# inverse-kinematics

./: CMakeLists.txt  InverseKinematics.vcxproj  InverseKinematics.vcxproj.filters  README.md
src/: Conversion.h  Joint.h  Link3.h  Point3.h  Vector3.h  main.cpp
